<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherTextView"
        android:text="@string/cityName_textview"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/weatherTextView"
        android:layout_toEndOf="@+id/weatherTextView"
        android:hint="@string/hint_editText"
        android:id="@+id/weatherEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherEditText"
        android:text="@string/search_button"
        android:layout_marginTop="10dp"
        android:id="@+id/searchButton"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherListView"
        android:layout_below="@+id/searchButton"
        android:layout_marginTop="10dp"> </ListView>



</RelativeLayout>